istiodemo.yml
apiVersion: v1
kind: List
metadata:
  resourceVersion: ""
items:
# Frontend config
- apiVersion: v1
  kind: ImageStream
  metadata:
    generation: 1
    labels:
      app: istiodemofrontend
    name: istiodemofrontend
  spec:
    lookupPolicy:
      local: false
    tags:
    - annotations:
        openshift.io/generated-by: OpenShiftWebConsole
        openshift.io/imported-from: theog75/istio_demo_frontend
      from:
        kind: DockerImage
        name: theog75/istio_demo_frontend
      generation: 1
      importPolicy: {}
      name: latest
      referencePolicy:
        type: Source
  status:
    dockerImageRepository: docker-registry.default.svc:5000/istiodemofrontend
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: istiodemofrontend
    name: istiodemofrontend
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      app: istiodemofrontend
      deploymentconfig: istiodemofrontend
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: istiodemofrontend
          deploymentconfig: istiodemofrontend
      spec:
        containers:
        - env:
          - name: POPULATOR_URL
            value: http://istiodemopopulator:8088
          image: theog75/istio_demo_frontend
          imagePullPolicy: Always
          name: istiodemofrontend
          ports:
          - name: http-8088
          - containerPort: 8088
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
    triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
        - istiodemofrontend
        from:
          kind: ImageStreamTag
          name: istiodemofrontend:latest
      type: ImageChange
    - type: ConfigChange
  status:
    availableReplicas: 0
    latestVersion: 0
    observedGeneration: 0
    replicas: 0
    unavailableReplicas: 0
    updatedReplicas: 0
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: istiodemofrontend
    name: istiodemofrontend
  spec:
    ports:
    - name: http-8088
      port: 8088
      protocol: TCP
      targetPort: 8088
    selector:
      deploymentconfig: istiodemofrontend
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Route
  metadata:
    labels:
      app: istiodemofrontend
    name: istiodemo
  spec:
    port:
      targetPort: 8088-tcp
    to:
      kind: Service
      name: istiodemofrontend
      weight: 100
    wildcardPolicy: None
  status:
    ingress: null
- apiVersion: v1
  kind: ImageStream
  metadata:
    labels:
      app: istiodemopopulator
    name: istiodemopopulator
  spec:
    lookupPolicy:
      local: false
    tags:
    - annotations:
        openshift.io/generated-by: OpenShiftWebConsole
        openshift.io/imported-from: theog75/istio_demo_populator
      from:
        kind: DockerImage
        name: theog75/istio_demo_populator
      generation: 1
      importPolicy: {}
      name: latest
      referencePolicy:
        type: Source
  status:
    dockerImageRepository: docker-registry.default.svc:5000/istiodemopopulator
# POPULATOR deploymentCONFIG
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: istiodemopopulator
    name: istiodemopopulator
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      app: istiodemopopulator
      deploymentconfig: istiodemopopulator
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftWebConsole
        creationTimestamp: null
        labels:
          app: istiodemopopulator
          deploymentconfig: istiodemopopulator
      spec:
        containers:
        - env:
          - name: MONGO_URL
            value: mongodb-32-centos7:27017
          - name: MONGO_DATABASE
            value: imdb
          - name: MONGO_USER
            value: redhat
          - name: MONGO_PASSWORD
            value: lirancohen
          image: theog75/istio_demo_populator@sha256:b3deed44f117b20ba1b5cea26a1a1dc3be3e27a40cec052a9c3bd6a0834c24ca
          imagePullPolicy: Always
          name: istiodemopopulator
          ports:
          -name: http-8088
          - containerPort: 8088
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
    triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
        - istiodemopopulator
        from:
          kind: ImageStreamTag
          name: istiodemopopulator:latest
      type: ImageChange
    - type: ConfigChange
  status:
    availableReplicas: 0
    latestVersion: 0
    observedGeneration: 0
    replicas: 0
    unavailableReplicas: 0
    updatedReplicas: 0
# Populator Imagestream
- apiVersion: v1
  kind: ImageStream
  metadata:
    labels:
      app: istiodemopopulator
    name: istiodemopopulator
  spec:
    lookupPolicy:
      local: false
    tags:
    - annotations:
        openshift.io/generated-by: OpenShiftWebConsole
        openshift.io/imported-from: theog75/istio_demo_populator
      from:
        kind: DockerImage
        name: theog75/istio_demo_populator
      generation: 1
      importPolicy: {}
      name: latest
      referencePolicy:
        type: Source
  status:
    dockerImageRepository: docker-registry.default.svc:5000/istiodemopopulator
# Populator service
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: istiodemopopulator
    name: istiodemopopulator
  spec:
    ports:
    - name: http-8088
      port: 8088
      protocol: TCP
      targetPort: 8088
    selector:
      deploymentconfig: istiodemopopulator
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
# MONGO Imagestream
- apiVersion: v1
  kind: ImageStream
  metadata:
    labels:
      app: mongodb-32-centos7
    name: mongodb-32-centos7
  spec:
    lookupPolicy:
      local: false
    tags:
    - annotations:
        openshift.io/generated-by: OpenShiftWebConsole
        openshift.io/imported-from: centos/mongodb-32-centos7
      from:
        kind: DockerImage
        name: centos/mongodb-32-centos7
      generation: 1
      importPolicy: {}
      name: latest
      referencePolicy:
        type: Source
  status:
    dockerImageRepository: docker-registry.default.svc:5000/mongodb-32-centos7
# DeploymentConfig mongo
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: mongodb-32-centos7
    name: mongodb-32-centos7
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      app: mongodb-32-centos7
      deploymentconfig: mongodb-32-centos7
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftWebConsole
        creationTimestamp: null
        labels:
          app: mongodb-32-centos7
          deploymentconfig: mongodb-32-centos7
      spec:
        containers:
        - env:
          - name: MONGODB_USER
            value: redhat
          - name: MONGODB_PASSWORD
            value: lirancohen
          - name: MONGODB_DATABASE
            value: imdb
          - name: MONGODB_ADMIN_PASSWORD
            value: lirancohen
          image: centos/mongodb-32-centos7
          imagePullPolicy: Always
          name: mongodb-32-centos7
          ports:
          - name: mongo-27017
          - containerPort: 27017
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /var/lib/mongodb/data
            name: mongodb-32-centos7-1
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - emptyDir: {}
          name: mongodb-32-centos7-1
    test: false
    triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
        - mongodb-32-centos7
        from:
          kind: ImageStreamTag
          name: mongodb-32-centos7:latest
      type: ImageChange
    - type: ConfigChange
# Mongo Service
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: mongodb-32-centos7
    name: mongodb-32-centos7
  spec:
    ports:
    - name: mongo-27017-tcp
      port: 27017
      protocol: TCP
      targetPort: 27017
    selector:
      deploymentconfig: mongodb-32-centos7
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
# Frontend route
- apiVersion: v1
  kind: Route
  metadata:
    labels:
      app: istiodemofrontend
    name: istiodemo
  spec:
    port:
      targetPort: 8088-tcp
    to:
      kind: Service
      name: istiodemofrontend
      weight: 100
    wildcardPolicy: None
  status:
    ingress: null
